cargo-features = ["edition2021"]

[package]
name = "race"
version = "0.1.0"
authors = ["Micah Switzer <micah.switzer.dev@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20"
libc = "0.2"

[profile.release]
lto = true
panic = "abort"
